added virtual env directions to external hardware lab

--- a/ENGR114-Labs/Lab07-External_Hardware/ENGR114-Lab07-External-Hardware.ipynb
+++ b/ENGR114-Labs/Lab07-External_Hardware/ENGR114-Lab07-External-Hardware.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "### Part 1: Turn an LED on and off with Python and an Arduino \n",
     "\n",
-    "(a) Download the Arduino IDE \n",
+    "(a) Create a virtual environment and install PySerial \n",
     "\n",
     "(b) Wire an LED and resistor to the Arduino \n",
     "\n",
@@ -99,13 +99,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### (a) Download the Arduino IDE \n",
+    "#### (a) Create a virtual environment and install PySerial\n",
     "\n",
-    "Download the Arduino IDE using the following link: \n",
+    "A virtual environment is an installation of Python and external packages that is separate from the default version of Python running on your computer. Virtual environments are useful because they allow programmers to specify a different version of Python and external packages for different projects. In this lab, you will use an external Python package called **PySerial**.\n",
     "\n",
-    " > [https://www.arduino.cc/en/Main/Software](https://www.arduino.cc/en/Main/Software)\n",
+    "At the start of the lab, you will use the **Anaconda Prompt** to create a new virtual environment and then install a couple of Python packages into it. \n",
     "\n",
-    "Scroll down the page to the **[Download the Arduino IDE]** section. Be sure to select: **[Windows ZIP file for non admin install]** as new software can not be installed on lab computers without administrator privileges. You can select **[JUST DOWNLOAD]** from the donation screen. Extract the downloaded .zip folder to your thumb drive or the desktop. "
+    "Open the **Anaconda Prompt** and type the command below to create a new virtual environment called ```pyserial``` with Python version 3.7:\n",
+    "\n",
+    "```text\n",
+    "conda create -n pyserial python=3.7\n",
+    "```\n",
+    "\n",
+    "Type ```y``` for yes when prompted. Next, you will _activate_ the ```pyserial``` virtual environment. A virtual environment needs to be activated before you can install packages into it. Type the command below to activate the ```pyserial``` virtual environment.\n",
+    "\n",
+    "```text\n",
+    "conda activate pyserial\n",
+    "```\n",
+    "\n",
+    "When the ```pyserial``` virtual environment is active, you should see ```(pyserial)``` in parenthesis before the command prompt. Now we activated the ```pyserial``` environment, we can install packages into it. Use the command below to install **PySerial**, **Jupyter**, **NumPy**, and **Matplotlib** into the environment.\n",
+    "\n",
+    "```text\n",
+    "conda install pyserial jupyter numpy matplotlib\n",
+    "```\n",
+    "\n",
+    "Type ```y``` for yes when prompted. You can confirm that PySerial was installed by opening up the Python REPL, also called the Python prompt and typing a few commands. You enter the Python REPL by typing ```python``` into the **Anaconda Prompt**.  In the code below, do not type the ```>>>``` prompt characters. These characters are shown to indicate the Python prompt, not something the user should type.\n",
+    "\n",
+    "```text\n",
+    "python\n",
+    ">>> import serial\n",
+    ">>> serial.__version__\n",
+    ">>> exit()\n",
+    "```\n",
+    "\n",
+    "If the command ```serial.__version__``` printed out a version like ```'3.4'```, you know that **PySerial** was successfully installed. For the remainder of the lab, you can bring up the Python REPL, or Python Prompt, by typing the command ```python``` into the **Anaconda Prompt**. You can exit out of the Python REPL, or Python Prompt by typing the command ```exit()```. Remember you can open  Jupyter notebook using the **Anaconda Prompt** by typing the command ```jupyter notebook```."
    ]
   },
   {
@@ -189,17 +216,9 @@
    "source": [
     "#### (f) Use the Python REPL to turn the Arduino LED on and off\n",
     "\n",
-    "Next, you are going to use Python to turn the Arduino LED on and off. You will accomplish this with a Python package called **PySerial**. **PySerial** ([pythonhosted.org/pyserial](https://pythonhosted.org/pyserial/)) is a Python package used for serial communication. Before you can use **PySerial** with Python, the **PySerial** package needs to be installed. \n",
+    "Next, you are going to use Python to turn the Arduino LED on and off. You will accomplish this with a Python package called **PySerial**. **PySerial** ([pythonhosted.org/pyserial](https://pythonhosted.org/pyserial/)) is a Python package used for serial communication. Before you can use **PySerial** with Python, the **PySerial** package needs to be installed.\n",
     "\n",
-    "The **PySerial** package can be installed at the **Anaconda Prompt**. Go to the Windows Start Menu and search for **Anaconda Prompt**. Open an **Anaconda Prompt** window. At the prompt, type the following command and hit [Enter].\n",
-    "\n",
-    "```text\n",
-    "conda install pyserial\n",
-    "```\n",
-    "\n",
-    "Then type ```y``` for yes when prompted.\n",
-    "\n",
-    "![Anaconda Prompt showing the command to install PySerial](images/anaconda_prompt_install_pyserial.png)\n",
+    "We installed PySerial in a previous step, make sure you are in the ```pyserial``` virtual environment, denoted by ```(pyserial)``` in parenthesis is shown at the start of the Anaconda Prompt before you proceed. If the ```pyserial``` environment is not active, you can activate it by typing the command ```conda activate pyserial``` in the Anaconda Prompt.\n",
     "\n",
     "At the Anaconda Prompt, type ```python``` to enter the Python REPL (the Python Prompt).\n",
     "\n",
