--- a/ENGR114-Labs/Lab08-Taylor_Series/ENGR114-Lab08-Taylor_Series.ipynb
+++ b/ENGR114-Labs/Lab08-Taylor_Series/ENGR114-Lab08-Taylor_Series.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Create a new Python script called **taylor_series.py** which will contain a user-defined function called ```taylor()```. The ```taylor()``` function will have the function name, inputs, outputs and doc string information as shown.\n",
     "\n",
-    "```\n",
+    "```text\n",
     "def taylor(func, x, terms):\n",
     "\"\"\"\n",
     "Performs the Taylor series expansion for either the sine of x or for Euler's number raised to x. \n",
@@ -39,14 +39,14 @@
     " \n",
     " Input:\n",
     "     - func: A string describing which function to to calculate the Taylor \n",
-    "           series expansion of.  ('sin' for sine(x), 'exp' for e^x)\n",
+    "             series expansion of.  ('sin' for sine(x), 'exp' for e^x)\n",
     "     - x: Input argument that the function will operate on.  Must be a float or an integer between -50 and 50\n",
-    "     - terms: number of terms in the Taylor Series. Must be an int greater than zero up to and including 100.\n",
+    "     - terms: number of terms in the Taylor Series. Must be an int greater than zero up to and including 50.\n",
     "              Defaults to 10. Has to be an integer between 1 and 50.\n",
     " \n",
     " Output:\n",
     "     - series_sum: equals the sum of all of the terms in the Taylor Series up to the number of terms specified.\n",
-    "       Will be a float.\n",
+    "                   Will be a float.\n",
     "\n",
     "\"\"\"\n",
     "```\n",
@@ -59,12 +59,11 @@
     "\n",
     "For example, if a user tries to call the function with ```x``` set equal to -60, the following exception is triggered.\n",
     "\n",
-    "```\n",
+    "```text\n",
     "if x > 50:\n",
     "    raise Exception('x should not exceed 50')\n",
     "\n",
-    "```\n",
-    "\n"
+    "```\n"
    ]
   },
   {
@@ -147,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
