--- a/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2019Q4.ipynb
@@ -122,7 +122,8 @@
     "## Grading\n",
     "\n",
     " * Homework: 15%\n",
-    " * Exams: 20%\n",
+    " * Exam 1: 20%\n",
+    " * Exam 2: 20%\n",
     " * Labs: 25%\n",
     " * In-class: 5%\n",
     " * Project: 15%\n",
@@ -292,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
