--- a/ENGR114-Syllabus/ENGR114-Syllabus-2020Q1.ipynb
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2020Q1.ipynb
@@ -16,7 +16,7 @@
     " * Instructor: Peter Kazarinoff\n",
     " * Instructor email: peter.kazarinoff@pcc.edu\n",
     " * Instructor phone: 971-722-8065 (email is the best way to get in touch)\n",
-    " * Office Hours: Mon 1:00pm-4:00pm and Tues 9:30am-11:30am\n",
+    " * Office Hours: Wed 1:00pm-3:00pm and Thurs 1:00pm-4:00pm\n",
     " * Office Location: SY ST200"
    ]
   },
@@ -257,15 +257,14 @@
     "| --- | --- | --- | --- |\n",
     "| Week 1 | The Python REPL | Lab 1: Circuit Python | |\n",
     "| Week 2 | Data types and variables | Lab 2: Data Types | Homework 1 |\n",
-    "| Week 3 | Data structures, input and print | Lab 3: Weather Data | Homework 2 |\n",
+    "| Week 3 | No Class - Holiday | Lab 3: Weather Data | Homework 2 |\n",
     "| Week 4 | Plotting | Lab 4: Plotting | Homework 3 |\n",
     "| Week 5 | Functions | Lab 5: Web API's | Homework 4 |\n",
     "| Week 6 | **Exam 1** | No Lab  | |\n",
-    "| Week 7 | If, elif, else | Lab 6: Image Editing | |\n",
-    "| Week 8 | Loops | Lab 7: External Hardware | Homework 5 |\n",
-    "| Week 9 | External Hardware | Lab 8: Taylor Series | Homework 6 |\n",
-    "| Week 10 | MicroPython | No Lab | Homework 7 |\n",
-    "| Week 11 | Review | **Exam 2** | |\n",
+    "| Week 7 | If, elif, else | Lab 6: Image Editing | Homework 5 |\n",
+    "| Week 8 | For Loops | Lab 7: External Hardware | Homework 6 |\n",
+    "| Week 9 | While Loops | Lab 8: Taylor Series | Homework 7 |\n",
+    "| Week 10 | Review | **Exam 2** | |\n",
     "| Finals Week | **Final Project Delivery** | | |"
    ]
   },
