--- a/ENGR114-Syllabus/ENGR114-Syllabus-2020Q1.tex
+++ b/ENGR114-Syllabus/ENGR114-Syllabus-2020Q1.tex
@@ -11,8 +11,7 @@
 % Inherit from the specified cell style.
 
     \documentclass[11pt]{article}
-    	\usepackage[T1]{fontenc}
-    	\usepackage{mathpazo}
+
 
     
     %% installed packages_rev2.tplx %%
@@ -30,6 +29,12 @@
 \definecolor{mygray}{rgb}{0.8,0.8,0.8} % color values Red, Green, Blue
 \definecolor{mygreen}{RGB}{28,172,0}
 \definecolor{mylilas}{RGB}{170,55,241}
+    
+    %\usepackage{iftex}
+
+    	\usepackage[T1]{fontenc}
+    	\usepackage{mathpazo}
+
 
     % Basic figure setup, for now with no caption control since it's done
     % automatically by Pandoc (which extracts ![](path) syntax from Markdown).
@@ -457,7 +462,7 @@ book.
   \href{https://www.adafruit.com/product/3333}{adafruit.com/product/3333}
 \end{itemize}
 
-All PCC Computer Labs have Internet access. Remember to sign into your
+Remember to sign into your
 myPCC email account before logging in to the course programming
 environment. The course programming environment will work on all student
 laptops, desktops, and Chromebooks, tablets that have an Internet
@@ -515,6 +520,9 @@ last week of classes.
 \item
   Generally, a calculator and one page of notes are allowed on the
   exams, both during the written and computer portions.
+\item
+  You must complete each exam during the exam period. Uploads after the
+  deadline will receive zero credit.
 \end{itemize}
 
     \hypertarget{labs}{%
@@ -775,7 +783,7 @@ Week 3 & No Class - Holiday & Lab 3: Weather Data & Homework
 2\tabularnewline
 Week 4 & Plotting & Lab 4: Plotting & Homework 3\tabularnewline
 Week 5 & Functions & Lab 5: Web API's & Homework 4\tabularnewline
-Week 6 & Review & \textbf{Exam 1} &\tabularnewline
+Week 6 & \textbf{Exam 1} & No Lab &\tabularnewline
 Week 7 & If, elif, else & Lab 6: Image Editing & Homework
 5\tabularnewline
 Week 8 & For Loops & Lab 7: External Hardware & Homework
@@ -785,6 +793,7 @@ Week 10 & Review & \textbf{Exam 2} &\tabularnewline
 Finals Week & \textbf{Final Project Delivery} & &\tabularnewline
 \bottomrule
 \end{longtable}
+
 
 
     % Add a bibliography block to the postdoc
